[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "MpApi.Utils"
authors = [{name = "Maurice Mengel", email = "mauricemengel@gmail.com"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)"]
dynamic = ["version", "description"]
keywords = ["museum", "museumPlus", "api client"]
# datetime should be included in Python
# flit?
#requires-python = 3.9.1 
dependencies = [
	#"dateutil", 
	"flit",
	"lxml >=4.8.0", #pathlike objects
	"openpyxl",
    "requests >=2.6",
	"typing_extensions",
]
[project.optional-dependencies]
test = [
    "pytest >=2.7.3",
]

[project.urls]
Home = "https://github.com/mokko/MpApi-Util"

[project.scripts]
du = 'MpApi.Utils:du'
rename ='MpApi.Utils:rename'
bcreate = 'MpApi.Utils:bcreate'
prepare = 'MpApi.Utils:prepareUpload'
update_schemas = 'MpApi.Utils:update_schemas'