[build-system]
requires = ["flit_core"]
build-backend = "flit_core.buildapi"

[project]
name = "MpApi.Utils"
authors = [{name = "Maurice Mengel", email = "mauricemengel@gmail.com"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)"]
dynamic = ["version", "description"]
keywords = ["museum", "museumPlus", "api client"]
# datetime should be included in Python
# flit?
#requires-python = 3.9.1 
dependencies = [
	#"dateutil", 
	"flit",
	"lxml >=4.8.0", 
	"openpyxl",
	"pyexiv2",
    "requests >=2.6",
	"tqdm",
	"typing_extensions",
]
[project.optional-dependencies]
test = [
    "pytest >=2.7.3",
]

[project.urls]
Home = "https://github.com/mokko/MpApi-Util"

[project.scripts]
attach = 'MpApi.Utils:attacher'
#du = 'MpApi.Utils:du'
brename ='MpApi.Utils:rename'
#breplace = 'MpApi.Utils:replace'
mover = 'MpApi.Utils:move'
prepare = 'MpApi.Utils:prepareUpload'
reportx = 'MpApi.Utils:reportX'
sren = 'MpApi.Utils:sren'
update_schemas = 'MpApi.Utils:update_schemas'
upload = 'MpApi.Utils:upload' # asset uploader
