[build-system]
requires = ["flit_core"]
build-backend = "flit_core.buildapi"

[project]
name = "MpApi.Utils"
authors = [{name = "Maurice Mengel", email = "mauricemengel@gmail.com"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)"]
dynamic = ["version", "description"]
keywords = ["museum", "museumPlus", "api client"]
requires-python=">=3.11.1" # union types with | 
dependencies = [
	"flit",
	"lxml >=4.8.0", 
	"openpyxl",
	"pillow", # to read exif tags
    "requests >=2.6",
	"tqdm",
	"typing_extensions",
]
[project.optional-dependencies]
test = [
    "pytest >=2.7.3",
]
mypy = [
    "types-Pillow",
    "openpyxl-stubs",
]

[project.urls]
Home = "https://github.com/mokko/MpApi-Util"

[project.scripts]
attach = 'MpApi.Utils:attacher'
attach2 = 'MpApi.Utils:attacher2'
becky = 'MpApi.Utils:becky'
count = 'MpApi.Utils:count'
#du = 'MpApi.Utils:du'
#breplace = 'MpApi.Utils:replace'
mk_grp = 'MpApi.Utils:mk_grp'
mover = 'MpApi.Utils:move'
prepare = 'MpApi.Utils:prepareUpload'
reportx = 'MpApi.Utils:reportX'
restart = 'MpApi.Utils:restart'
sren = 'MpApi.Utils:sren'
update_schemas = 'MpApi.Utils:update_schemas'
up = 'MpApi.Utils:upload' # asset uploader
